--- a/Patient.Api/Patient.Api.Client/Pages/PatientPages/Reports/ReportForms/ReportForm2.razor
+++ b/Patient.Api/Patient.Api.Client/Pages/PatientPages/Reports/ReportForms/ReportForm2.razor
@@ -15,7 +15,7 @@
             <MudPaper Class="pa-4 ma-3 summary-item" Elevation="3">
                 <section class="mt-5 mb-3">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-4 justify-content-center align-items-center">
                             <img src="/images/Reports/diseaseImage.png" style="max-width: 200px;" />
                         </div>
                         <div class="col">
