--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/MainPanel/AdditionalComponents/SummaryComponent.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/MainPanel/AdditionalComponents/SummaryComponent.razor
@@ -13,7 +13,7 @@
     <section>
         <div class="row position-relative">
             <div class="col ">
-                <MudPaper Class="pa-4 ma-3 summary-item" Elevation="3" Style="cursor: pointer;" @onclick='() => RedirectTo("rekomendacje")'>
+                <MudPaper Class="pa-4 ma-3 summary-item" Elevation="3" Style="cursor: pointer;" >
                     <h4>Nowe rekomendacje</h4>
                     <h4>@newRecommandationNumber</h4>
                 </MudPaper>
@@ -25,7 +25,7 @@
                 </MudPaper>
             </div>
             <div class="col ">
-                <MudPaper Class="pa-4 ma-3 summary-item" Elevation="3" Style="cursor: pointer;" @onclick='() => RedirectTo("wiadomosci")'>
+                <MudPaper Class="pa-4 ma-3 summary-item" Elevation="3" Style="cursor: pointer;" >
                     <h4>Wiadomosci</h4>
                     <h4>0</h4>
                 </MudPaper>
