--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/MedicalDocumentation/AddMedicalDocumention.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/MedicalDocumentation/AddMedicalDocumention.razor
@@ -50,11 +50,8 @@
                 foreach (var dto in addMedicalDocumentionDtos)
                 {
                     <div class="row mt-2 d-flex-row border border-primary border-primary-custom align-items-center justify-content-start mt-5">
-                        <div class="col  d-flex-column justify-content-center align-items-center text-center">
-                            <div class="file-block mx-2">
-                                <div @onclick="() => HandleEraseFile(dto)" class="bi-x-circle"></div>
-                                <div class="bi-file-icon"></div>
-                            </div>
+                        <div class="col  d-flex-column justify-content-center align-items-center text-center">                          
+                            <div class="bi-file-icon-erasable mx-2" @onclick="() => HandleEraseFile(dto)"></div>                          
                         </div>
 
                         <div class="col d-flex-column">
@@ -85,7 +82,7 @@
                 <div class="row text-center pt-2">
                     <btn type="button" class="btn btn-primary btn-custom-primary text-center" @onclick="HandleAddFiles">Dodaj pliki</btn>
                 </div>
-            }
+            
 
         }
     }
