--- a/Patient.Api/Patient.Api.Client/Pages/PatientPages/Reports/CreateReportFormMain.razor
+++ b/Patient.Api/Patient.Api.Client/Pages/PatientPages/Reports/CreateReportFormMain.razor
@@ -37,8 +37,12 @@
     @if (!showNextForm)
     {
         <div class="container d-flex justify-content-center" style="max-width: 80%;">
-            <EditForm method="post" Model="@report" FormName="CreateReport" Enhance>
+            <EditForm method="post" EditContext="editContext" FormName="CreateReport" OnValidSubmit="HandleShowNextForm" Enhance>
+                <DataAnnotationsValidator />
+                <ValidationSummary />
+                
                 <MudPaper Class="pa-4 ma-3 summary-item" Elevation="3">
+                    <Patient.Api.Client.Layout.ManageComponents.StatusMessage Message="@errorMessageHealth" />
                     <section class="mt-4 mb-4">
                         <div class="row d-flex">
                             <div class="col-4 d-flex justify-content-center align-content-center">
@@ -46,7 +50,7 @@
                             </div>
                             <div class="col justify-content-center">
                                 <h3 class="py-5">Określ swoje samopoczucie </h3>
-                                <MudSlider TickMarkLabels="@sliderLabels" TickMarks="true" Step="10" Value="@report.PatientsHealthRating" />
+                                <MudSlider TickMarkLabels="@sliderLabels" Max="10" TickMarks="true" Step="1" @bind-Value="@report.PatientsHealthRating" />
                             </div>
                         </div>
                     </section>
@@ -55,6 +59,7 @@
                 <MudPaper Class="pa-4 ma-3 summary-item" Elevation="3">
                     <section class="mb-4">
                         <div class="row pt-5">
+                            <Patient.Api.Client.Layout.ManageComponents.StatusMessage Message="@errorMessageQuestions" />
                             <div class="col-4 d-flex justify-content-center">
                                 <img src="/images/Reports/questionsIcon.png" style="max-width: 200px; max-height: 200px;" />
                             </div>
@@ -67,33 +72,37 @@
                                             <div class="row mt-4 mb-3 justify-content-center text-center">
                                                 <h5 class="text-start">@questionList[item.Id]</h5>
                                                 <InputTextArea id="@item.Id" style="width: 80%; height: 30px; resize: none;"
-                                                               @bind-Value="@item.Answer" class="form-control no-border-input" placeholder="Odpowiedz" />
+                                                @bind-Value="@item.Answer" class="form-control no-border-input" placeholder="Odpowiedz" />
+                                                
+                                                <ValidationMessage For="@(() => item.Answer)" />
                                             </div>
                                         </div>
                                     }
+                                    <div class="list-group-item">
+                                        <h5>Dodatkowe informacje (jeśli chcesz coś przekazać)</h5>
+                                        <InputTextArea id="description" style="width: 80%; height: 30px; resize: none;"
+                                                       @bind-Value="report.Description" label="Dodatkowy Opis"
+                                                       class="form-control mb-4"></InputTextArea>
+                                    </div>
                                 </div>
 
-                                <div class="row pt-5 px-5">
-                                    <h5>Dodatkowe informacje (jeśli chcesz coś przekazać)</h5>
-                                    <InputTextArea id="description" style="width: 80%; height: 30px; resize: none;"
-                                                   @bind-Value="report.Description" label="Dodatkowy Opis"
-                                                   class="form-control mb-4"></InputTextArea>
-                                </div>
+                                
                             </div>
                         </div>
 
                     </section>
                 </MudPaper>
-
-                <section>
-                    <div class="row">
-                        <div class="col">
+                <MudPaper Class="pa-4 ma-3 summary-item" Elevation="3">
+                    <section>
+                        <div class="row pb-5">
+                            <div class="col">
+                            </div>
+                            <div class="col text-end">
+                                <button type="submit" class="back-icon bi-arrow-right"></button>
+                            </div>
                         </div>
-                        <div class="col text-end">
-                            <btn type="button" class="back-icon bi-arrow-right" @onclick="HandleShowNextForm"></btn>
-                        </div>
-                    </div>
-                </section>
+                    </section>
+                </MudPaper>       
             </EditForm>
         </div>
     }
@@ -115,7 +124,7 @@
     private bool reportAddingFailed;
 
 
-    string[] sliderLabels = new string[] { "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", };
+    string[] sliderLabels = new string[] { "0","1", "2", "3", "4", "5", "6", "7", "8", "9", "10", };
 
     //
     private List<string> questionList = new();
@@ -125,10 +134,17 @@
     //zmiana
     private bool showNextForm;
 
+    //validation
+    private EditContext editContext;
+    private string? errorMessageHealth;
+    private string? errorMessageQuestions;
+
+
     protected async override Task OnInitializedAsync()
     {
         questionList = QuestionsForReport.GetAllQuestions();
         MakeAnswearElements(questionList.Count());
+        editContext = new EditContext(answerItems);
         StateHasChanged();
     }  
 
@@ -162,9 +178,21 @@
     private void HandleShowNextForm()
     {
         GetPatientsAnswers();
+        if (report.PatientsHealthRating == 0)
+        {
+            errorMessageHealth = "Określ stan zdrowia";
+            return;
+        }
+        errorMessageHealth = "";
+        if (report.PatientsAnswers.Any(answer => string.IsNullOrEmpty(answer)))
+        {
+            errorMessageQuestions = "Wypełnij wymagane pola";
+            return;
+        }
+        errorMessageQuestions = "";
         showNextForm = true;
         StateHasChanged();
     }
 
-    
+
 }
