--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Patients/PatientPreviewModal.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Patients/PatientPreviewModal.razor
@@ -21,7 +21,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Podgląd pacjenta</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" @onclick="HandleCloseModal"></button>
                 </div>
                 <div class="modal-body">
                     <div class="container">
