--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Patients/PatientsDocumentationForDoctorComponent.razor.css
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Patients/PatientsDocumentationForDoctorComponent.razor.css
@@ -1,11 +1,11 @@
-﻿
-
+﻿body {
+}
 
 .modal {
-    position: absolute;
+    position: fixed;
     width: 50rem;
     height: 75rem;
-    transform: translate(31%, 14%);
+    transform: translate(80%, 14%);
     z-index: 1050;
     border-radius: 10px;
     justify-content: center;
@@ -19,6 +19,11 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1040;
+}
+
+.modal-content {
+    max-height: 80vh;
+    overflow-y: auto;
 }
 
 .modal-dialog {
