--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/ReportPreviewComponent.razor.css
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/ReportPreviewComponent.razor.css
@@ -8,3 +8,18 @@
         border: 2px solid aquamarine;
         border-color: aquamarine;
     }
+
+
+.custom-style-class.modal {
+    position: fixed;
+    width: 50rem;
+    height: 75rem;
+    transform: translate(55%, 14%);
+    z-index: 1050;
+    border-radius: 10px;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    max-height: 700px;
+    overflow-y: auto;
+}
